--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint",
-		"check": "biome check --write *"
+		"check": "biome check --write *",
+		"storybook": "storybook dev -p 6006",
+		"build-storybook": "storybook build"
 	},
 	"dependencies": {
 		"@biomejs/biome": "1.8.0",
@@ -32,12 +34,23 @@
 		"tailwindcss-animate": "1.0.7"
 	},
 	"devDependencies": {
+		"@chromatic-com/storybook": "^1.5.0",
+		"@storybook/addon-essentials": "8.1.5",
+		"@storybook/addon-interactions": "8.1.5",
+		"@storybook/addon-links": "8.1.5",
+		"@storybook/addon-onboarding": "8.1.5",
+		"@storybook/blocks": "8.1.5",
+		"@storybook/nextjs": "8.1.5",
+		"@storybook/react": "8.1.5",
+		"@storybook/test": "8.1.5",
 		"@types/node": "20.14.1",
 		"@types/react": "18.3.3",
 		"@types/react-dom": "18.3.0",
 		"eslint": "9.4.0",
 		"eslint-config-next": "14.2.3",
+		"eslint-plugin-storybook": "0.8.0",
 		"postcss": "8.4.38",
+		"storybook": "8.1.5",
 		"tailwindcss": "3.4.3",
 		"typescript": "5.4.5"
 	}
