--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -34,11 +34,11 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node-
       - run: pnpm i --frozen-lockfile
-      # - run: pnpm fmt
+      - run: pnpm check:ci
+      # FIXME: add lint and env settings
       # - run: pnpm lint
         # env:
           # SKIP_ENV_VALIDATION: true
-      # - run: pnpm lint:mark
       - run: pnpm build
         # env:
         #   SKIP_ENV_VALIDATION: true
