refactor: 💡 change env name of postgres url

--- a/.env.sample
+++ b/.env.sample
@@ -15,8 +15,8 @@ NEXT_PUBLIC_G_TAG=
 LINE_NOTIFY_SECRET_TOKEN=
 
 ## Prisma connection
-POSTGRES_PRISMA_URL="postgresql://USERNAME:PASSWORD@IP_ADDRESS:PORT/DB_NAME?schema=SCHEMA_NAME"
-POSTGRES_URL_NON_POOLING="postgresql://USERNAME:PASSWORD@IP_ADDRESS:PORT/DB_NAME?schema=SCHEMA_NAME"
+POSTGRES_URL="postgresql://USERNAME:PASSWORD@IP_ADDRESS:PORT/DB_NAME?schema=SCHEMA_NAME"
+POSTGRES_DIRECT_URL="postgresql://USERNAME:PASSWORD@IP_ADDRESS:PORT/DB_NAME?schema=SCHEMA_NAME"
 
 ## Docker Compose
 POSTGRES_USER=
