--- a/compose.yaml
+++ b/compose.yaml
@@ -24,8 +24,8 @@ services:
       - MINIO_SECRET_KEY=${MINIO_SECRET_KEY}
       - NEXT_PUBLIC_SENTRY_DSN=${NEXT_PUBLIC_SENTRY_DSN}
       - NEXT_PUBLIC_G_TAG=${NEXT_PUBLIC_G_TAG}
-      - POSTGRES_PRISMA_URL=${POSTGRES_PRISMA_URL}
-      - POSTGRES_URL_NON_POOLING=${POSTGRES_URL_NON_POOLING}
+      - POSTGRES_URL=${POSTGRES_URL}
+      - POSTGRES_DIRECT_URL=${POSTGRES_DIRECT_URL}
 
   dev_db:
     container_name: dev-db
