--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"@next/mdx": "15.1.3",
 		"@next/third-parties": "15.1.3",
 		"@prisma/client": "6.1.0",
+		"@prisma/extension-accelerate": "1.2.1",
 		"@radix-ui/react-dialog": "1.1.4",
 		"@radix-ui/react-icons": "1.3.2",
 		"@radix-ui/react-label": "2.1.1",
