refactor: 💡 disable hints on pnpm i

--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
 		"test": "vitest",
 		"test:e2e": "playwright test",
 		"test:storybook": "test-storybook --coverage --coverageDirectory .storybook-coverage",
-		"prisma:generate": "prisma generate",
+		"prisma:generate": "prisma generate --no-hints",
 		"prisma:migrate": "prisma migrate dev",
 		"prisma:deploy": "prisma migrate deploy",
 		"prisma:seed": "prisma db seed",
 		"prisma:studio": "prisma studio",
-		"postinstall": "prisma generate",
+		"postinstall": "pnpm prisma:generate",
 		"commit": "git-cz",
 		"storybook": "storybook dev -p 6006",
 		"storybook:build": "storybook build -o .storybook-static",
