--- a/package.json
+++ b/package.json
@@ -37,6 +37,10 @@
 	"dependencies": {
 		"@biomejs/biome": "1.9.4",
 		"@hookform/resolvers": "3.9.1",
+		"@mapbox/rehype-prism": "0.9.0",
+		"@mdx-js/loader": "3.1.0",
+		"@mdx-js/react": "3.1.0",
+		"@next/mdx": "15.1.3",
 		"@next/third-parties": "15.1.3",
 		"@prisma/client": "6.1.0",
 		"@radix-ui/react-dialog": "1.1.4",
@@ -100,6 +104,7 @@
 		"@testing-library/react": "16.1.0",
 		"@testing-library/user-event": "14.5.2",
 		"@types/bcryptjs": "2.4.6",
+		"@types/mdx": "2.0.13",
 		"@types/node": "22.10.2",
 		"@types/react": "19.0.2",
 		"@types/react-dom": "19.0.2",
@@ -111,6 +116,7 @@
 		"dotenv": "16.4.7",
 		"eslint": "9.17.0",
 		"eslint-config-next": "15.1.3",
+		"eslint-plugin-mdx": "3.1.5",
 		"eslint-plugin-storybook": "0.11.1",
 		"eslint-plugin-tailwindcss": "3.17.5",
 		"eslint-plugin-unused-imports": "4.1.4",
