refactor: 💡 env for docker

--- a/.env.sample
+++ b/.env.sample
@@ -18,17 +18,6 @@ LINE_NOTIFY_SECRET_TOKEN=
 POSTGRES_URL="postgresql://USERNAME:PASSWORD@IP_ADDRESS:PORT/DB_NAME?schema=SCHEMA_NAME"
 POSTGRES_DIRECT_URL="postgresql://USERNAME:PASSWORD@IP_ADDRESS:PORT/DB_NAME?schema=SCHEMA_NAME"
 
-## Docker Compose
-POSTGRES_USER=
-POSTGRES_PASSWORD=
-POSTGRES_DB=dump-db
-
-MINIO_ROOT_USER=
-MINIO_ROOT_PASSWORD=
-
-## t3-env for CI
-SKIP_ENV_VALIDATION=
-
 ## Auth.js
 AUTH_URL="http://localhost:3000"
 AUTH_SECRET= # generate by `openssl rand -base64 32` command
@@ -43,7 +32,24 @@ MINIO_PORT=
 MINIO_BUCKET_NAME=
 MINIO_ACCESS_KEY=
 MINIO_SECRET_KEY=
-NODE_TLS_REJECT_UNAUTHORIZED= # ="0" for self-signed certs only on localhost
+
+## Other
+NODE_TLS_REJECT_UNAUTHORIZED= # ="0" for self-signed certs only on localhost https://nodejs.org/api/cli.html#node_tls_reject_unauthorizedvalue
+
+# For CI
+
+## t3-env
+SKIP_ENV_VALIDATION=
+
+# Only for dev env
 
 ## Seed for Prisma
 SEED_PASSWORD=
+
+## Docker Compose
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+POSTGRES_DB=s-private-db
+
+MINIO_ROOT_USER=
+MINIO_ROOT_PASSWORD=
