--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 		"test": "vitest",
 		"test:e2e": "playwright test",
 		"test:storybook": "test-storybook --coverage --coverageDirectory .storybook-coverage",
-		"prisma:generate": "prisma generate --no-hints",
+		"prisma:generate": "prisma generate --no-hints --no-engine",
 		"prisma:migrate": "prisma migrate dev",
 		"prisma:deploy": "prisma migrate deploy",
 		"prisma:seed": "prisma db seed",
@@ -29,7 +29,10 @@
 		"license:summary": "license-checker --summary> library-license.txt",
 		"security": "pnpm audit",
 		"actionlint": "actionlint",
-		"ghalint": "ghalint run"
+		"ghalint": "ghalint run",
+		"pages:build": "npx @cloudflare/next-on-pages",
+		"preview": "pnpm pages:build && wrangler pages dev",
+		"deploy": "pnpm pages:build && wrangler pages deploy"
 	},
 	"prisma": {
 		"seed": "tsx prisma/seed.ts"
@@ -49,7 +52,7 @@
 		"@radix-ui/react-slot": "1.1.1",
 		"@radix-ui/react-tabs": "1.1.2",
 		"@radix-ui/react-toast": "1.2.4",
-		"@sentry/nextjs": "8.47.0",
+		"@sentry/nextjs": "8.35.0",
 		"@t3-oss/env-nextjs": "0.11.1",
 		"@tailwindcss/typography": "0.5.15",
 		"@tanstack/react-table": "8.20.6",
@@ -83,6 +86,9 @@
 	},
 	"devDependencies": {
 		"@chromatic-com/storybook": "3.2.3",
+		"@cloudflare/next-on-pages": "1.13.7",
+		"@cloudflare/workers-types": "4.20241230.0",
+		"@opennextjs/cloudflare": "0.3.3",
 		"@playwright/test": "1.49.1",
 		"@storybook/addon-a11y": "8.4.7",
 		"@storybook/addon-coverage": "1.0.5",
@@ -131,6 +137,7 @@
 		"tailwindcss": "3.4.17",
 		"tsx": "4.19.2",
 		"typescript": "5.7.2",
-		"vitest": "2.1.8"
+		"vitest": "2.1.8",
+		"wrangler": "3.99.0"
 	}
 }
