--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,8 @@
 		"jsx": "preserve",
 		"incremental": true,
 		"plugins": [{ "name": "next" }],
-		"paths": { "@/*": ["./src/*"] }
+		"paths": { "@/*": ["./src/*"] },
+		"types": ["@cloudflare/workers-types/2023-07-01"]
 	},
 	"include": [
 		"next-env.d.ts",
