--- a/package.json
+++ b/package.json
@@ -83,6 +83,9 @@
 	},
 	"devDependencies": {
 		"@chromatic-com/storybook": "3.2.3",
+		"@eslint/compat": "1.2.4",
+		"@eslint/eslintrc": "3.2.0",
+		"@eslint/js": "9.17.0",
 		"@playwright/test": "1.49.1",
 		"@storybook/addon-a11y": "8.4.7",
 		"@storybook/addon-coverage": "1.0.5",
@@ -116,6 +119,7 @@
 		"eslint-plugin-tailwindcss": "3.17.5",
 		"eslint-plugin-unused-imports": "4.1.4",
 		"git-cz": "4.9.0",
+		"globals": "15.14.0",
 		"license-checker": "25.0.1",
 		"markdownlint-cli2": "0.17.0",
 		"postcss": "8.4.49",
