--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
 		"license:summary": "license-checker --summary> library-license.txt",
 		"security": "pnpm audit",
 		"actionlint": "actionlint",
-		"ghalint": "ghalint run"
+		"ghalint": "ghalint run",
+		"depcheck": "depcheck"
 	},
 	"prisma": {
 		"seed": "tsx prisma/seed.ts"
@@ -37,7 +38,6 @@
 	"dependencies": {
 		"@biomejs/biome": "1.9.4",
 		"@hookform/resolvers": "3.9.1",
-		"@mapbox/rehype-prism": "0.9.0",
 		"@next/third-parties": "15.1.3",
 		"@prisma/client": "6.1.0",
 		"@prisma/extension-accelerate": "1.2.1",
@@ -52,7 +52,6 @@
 		"@sentry/nextjs": "8.47.0",
 		"@t3-oss/env-nextjs": "0.11.1",
 		"@tailwindcss/typography": "0.5.15",
-		"@tanstack/react-table": "8.20.6",
 		"bcryptjs": "2.4.3",
 		"class-variance-authority": "0.7.1",
 		"clsx": "2.1.1",
@@ -110,12 +109,16 @@
 		"@types/react-dom": "19.0.2",
 		"@types/uuid": "10.0.0",
 		"@typescript-eslint/eslint-plugin": "8.18.2",
+		"@typescript-eslint/parser": "8.19.0",
 		"@vitejs/plugin-react": "4.3.4",
 		"@vitest/coverage-v8": "2.1.8",
 		"autoprefixer": "10.4.20",
+		"depcheck": "1.4.7",
 		"dotenv": "16.4.7",
 		"eslint": "9.17.0",
 		"eslint-config-next": "15.1.3",
+		"eslint-plugin-import": "2.31.0",
+		"eslint-plugin-react": "7.37.3",
 		"eslint-plugin-storybook": "0.11.1",
 		"eslint-plugin-tailwindcss": "3.17.5",
 		"eslint-plugin-unused-imports": "4.1.4",
