test: 💍 add storybook tests

--- a/package.json
+++ b/package.json
@@ -91,12 +91,13 @@
 		"@storybook/addon-a11y": "8.4.7",
 		"@storybook/addon-coverage": "1.0.5",
 		"@storybook/addon-essentials": "8.4.7",
-		"@storybook/addon-interactions": "8.4.7",
 		"@storybook/addon-links": "8.4.7",
 		"@storybook/addon-onboarding": "8.4.7",
 		"@storybook/addon-storysource": "8.4.7",
 		"@storybook/addon-themes": "8.4.7",
 		"@storybook/blocks": "8.4.7",
+		"@storybook/experimental-addon-test": "8.4.7",
+		"@storybook/experimental-nextjs-vite": "8.4.7",
 		"@storybook/nextjs": "8.4.7",
 		"@storybook/react": "8.4.7",
 		"@storybook/test": "8.4.7",
@@ -112,6 +113,7 @@
 		"@typescript-eslint/eslint-plugin": "8.19.0",
 		"@typescript-eslint/parser": "8.19.0",
 		"@vitejs/plugin-react": "4.3.4",
+		"@vitest/browser": "2.1.8",
 		"@vitest/coverage-v8": "2.1.8",
 		"autoprefixer": "10.4.20",
 		"depcheck": "1.4.7",
@@ -127,6 +129,7 @@
 		"globals": "15.14.0",
 		"license-checker": "25.0.1",
 		"markdownlint-cli2": "0.17.1",
+		"playwright": "1.49.1",
 		"postcss": "8.4.49",
 		"rehype": "13.0.2",
 		"rehype-external-links": "3.0.0",
