--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -139,6 +139,7 @@ jobs:
             restore-keys: |
               ${{ runner.os }}-node-
         - run: pnpm i --frozen-lockfile
+        - run: pnpm exec playwright install
         - run: pnpm test
           env:
             AUTH_SECRET: ${{secrets.AUTH_SECRET}}
