test: 💍 add tests and refactor for viewer and dumper

--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
 		"lint:fix": "next lint --fix",
 		"lint:mark": "markdownlint-cli2 _markdown/*",
 		"lint:mark:fix": "markdownlint-cli2-fix _markdown/*",
-		"check:ci": "biome ci *",
-		"check:fix": "biome check --write *",
+		"fmt:ci": "biome ci *",
+		"fmt:fix": "biome check --write *",
 		"test": "vitest",
 		"test:e2e": "playwright test",
 		"test:storybook": "test-storybook --coverage --coverageDirectory .storybook-coverage",
