--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -97,7 +97,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node-
       - run: pnpm i --frozen-lockfile
-      - run: pnpm check:ci
+      - run: pnpm fmt:ci
       - run: pnpm lint
         env:
           SKIP_ENV_VALIDATION: true
