--- a/.env.sample
+++ b/.env.sample
@@ -21,6 +21,9 @@ POSTGRES_DIRECT_URL="postgresql://USERNAME:PASSWORD@IP_ADDRESS:PORT/DB_NAME?sche
 ## Auth.js
 AUTH_URL="http://localhost:3000"
 AUTH_SECRET= # generate by `openssl rand -base64 32` command
+AUTH0_ID=
+AUTH0_SECRET=
+AUTH0_ISSUER=
 
 ## Sentry
 SENTRY_AUTH_TOKEN=
