--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -47,6 +47,9 @@ jobs:
         env:
           AUTH_SECRET: ${{secrets.AUTH_SECRET}}
           AUTH_URL: ${{secrets.AUTH_URL}}
+          AUTH0_ID: ${{secrets.AUTH0_ID}}
+          AUTH0_SECRET: ${{secrets.AUTH0_SECRET}}
+          AUTH0_ISSUER: ${{secrets.AUTH0_ISSUER}}
           LINE_NOTIFY_SECRET_TOKEN: ${{secrets.LINE_NOTIFY_SECRET_TOKEN}}
           LINE_NOTIFY_URL: ${{secrets.LINE_NOTIFY_URL}}
           MINIO_ACCESS_KEY: ${{secrets.MINIO_ACCESS_KEY}}
@@ -144,6 +147,9 @@ jobs:
           env:
             AUTH_SECRET: ${{secrets.AUTH_SECRET}}
             AUTH_URL: ${{secrets.AUTH_URL}}
+            AUTH0_ID: ${{secrets.AUTH0_ID}}
+            AUTH0_SECRET: ${{secrets.AUTH0_SECRET}}
+            AUTH0_ISSUER: ${{secrets.AUTH0_ISSUER}}
             LINE_NOTIFY_SECRET_TOKEN: ${{secrets.LINE_NOTIFY_SECRET_TOKEN}}
             LINE_NOTIFY_URL: ${{secrets.LINE_NOTIFY_URL}}
             MINIO_ACCESS_KEY: ${{secrets.MINIO_ACCESS_KEY}}
