--- a/package.json
+++ b/package.json
@@ -49,7 +49,6 @@
 		"@radix-ui/react-separator": "1.1.1",
 		"@radix-ui/react-slot": "1.1.1",
 		"@radix-ui/react-tabs": "1.1.2",
-		"@radix-ui/react-toast": "1.2.4",
 		"@sentry/nextjs": "8.50.0",
 		"@t3-oss/env-nextjs": "0.11.1",
 		"@tailwindcss/typography": "0.5.16",
@@ -63,6 +62,7 @@
 		"minio": "8.0.3",
 		"next": "15.1.5",
 		"next-auth": "5.0.0-beta.25",
+		"next-themes": "0.4.4",
 		"next-view-transitions": "0.3.4",
 		"photoswipe": "5.4.4",
 		"pino": "9.6.0",
@@ -71,6 +71,7 @@
 		"react-dom": "19.0.0",
 		"server-only": "0.0.1",
 		"sharp": "0.33.5",
+		"sonner": "1.7.2",
 		"tailwind-merge": "2.6.0",
 		"tailwindcss-animate": "1.0.7",
 		"unified": "11.0.5",
