--- a/.github/workflows/gh-lint.yaml
+++ b/.github/workflows/gh-lint.yaml
@@ -13,14 +13,14 @@ env:
   # NOTE: actionlint をアップデートする場合は、 ACTIONLINT_VERSION, ACTIONLINT_CHECKSUM を更新してください
   ACTIONLINT_OS: linux
   ACTIONLINT_ARCH: amd64
-  ACTIONLINT_VERSION: 1.7.4
-  ACTIONLINT_CHECKSUM: fc0a6886bbb9a23a39eeec4b176193cadb54ddbe77cdbb19b637933919545395
+  ACTIONLINT_VERSION: 1.7.7
+  ACTIONLINT_CHECKSUM: 023070a287cd8cccd71515fedc843f1985bf96c436b7effaecce67290e7e0757
 
   # NOTE: ghalint をアップデートする場合は、 GHALINT_VERSION, GHALINT_CHECKSUM を更新してください
   GHALINT_OS: linux
   GHALINT_ARCH: amd64
-  GHALINT_VERSION: 1.1.0
-  GHALINT_CHECKSUM: 0dd811c621ddb42e8f641b6882f66dfb12255bb206bdbf0c405eb5fc2d239765
+  GHALINT_VERSION: 1.2.1
+  GHALINT_CHECKSUM: 3fafc8dac6fde1b74a5345764a9b19a94fdb2d374d3a3b076cee28b86449ae79
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref || github.run_id }}
@@ -35,7 +35,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-
+        with:
+          persist-credentials: false
       - name: Download actionlint
         run: |
           curl -L -o actionlint.tar.gz "https://github.com/rhysd/actionlint/releases/download/v${ACTIONLINT_VERSION}/actionlint_${ACTIONLINT_VERSION}_${ACTIONLINT_OS}_${ACTIONLINT_ARCH}.tar.gz"
@@ -80,7 +81,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-
+        with:
+          persist-credentials: false
       - name: Get Binary Info
         id: get-binary-info
         run: |
