--- a/.github/workflows/release-please.yaml
+++ b/.github/workflows/release-please.yaml
@@ -32,7 +32,8 @@ jobs:
         steps:
         - name: Checkout code
           uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
-
+          with:
+            persist-credentials: false
         - name: Extract version from GitHub release tag
           run: echo "VERSION=${GITHUB_REF#refs/tags/}" >> "$GITHUB_ENV"
         - name: Log in to Docker Hub
@@ -49,26 +50,26 @@ jobs:
             push: true
             tags: |
                 ${{ secrets.DOCKER_HUB_USERNAME }}/s-private:latest
-                ${{ secrets.DOCKER_HUB_USERNAME }}/s-private:${{ env.VERSION }}
+            # ${{ secrets.DOCKER_HUB_USERNAME }}/s-private:${{ env.VERSION }}
             secrets: |
-              AUTH_SECRET: ${{secrets.AUTH_SECRET}}
-              AUTH_URL: ${{secrets.AUTH_URL}}
-              AUTH0_ID: ${{secrets.AUTH0_ID}}
-              AUTH0_SECRET: ${{secrets.AUTH0_SECRET}}
-              AUTH0_ISSUER: ${{secrets.AUTH0_ISSUER}}
-              LINE_NOTIFY_SECRET_TOKEN: ${{secrets.LINE_NOTIFY_SECRET_TOKEN}}
-              LINE_NOTIFY_URL: ${{secrets.LINE_NOTIFY_URL}}
-              MINIO_ACCESS_KEY: ${{secrets.MINIO_ACCESS_KEY}}
-              MINIO_BUCKET_NAME: ${{secrets.MINIO_BUCKET_NAME}}
-              MINIO_HOST: ${{secrets.MINIO_HOST}}
-              MINIO_PORT: ${{secrets.MINIO_PORT}}
-              MINIO_SECRET_KEY: ${{secrets.MINIO_SECRET_KEY}}
-              NEXT_PUBLIC_G_TAG: ${{secrets.NEXT_PUBLIC_G_TAG}}
-              NEXT_PUBLIC_SENTRY_DSN: ${{ secrets.NEXT_PUBLIC_SENTRY_DSN }}
-              POSTGRES_DIRECT_URL: ${{ secrets.POSTGRES_DIRECT_URL }}
-              POSTGRES_URL: ${{ secrets.POSTGRES_URL }}
-              SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
-              SENTRY_REPORT_URL: ${{ secrets.SENTRY_REPORT_URL }}
+              AUTH_SECRET=${{secrets.AUTH_SECRET}}
+              AUTH_URL=${{secrets.AUTH_URL}}
+              AUTH0_ID=${{secrets.AUTH0_ID}}
+              AUTH0_SECRET=${{secrets.AUTH0_SECRET}}
+              AUTH0_ISSUER=${{secrets.AUTH0_ISSUER}}
+              LINE_NOTIFY_SECRET_TOKEN=${{secrets.LINE_NOTIFY_SECRET_TOKEN}}
+              LINE_NOTIFY_URL=${{secrets.LINE_NOTIFY_URL}}
+              MINIO_ACCESS_KEY=${{secrets.MINIO_ACCESS_KEY}}
+              MINIO_BUCKET_NAME=${{secrets.MINIO_BUCKET_NAME}}
+              MINIO_HOST=${{secrets.MINIO_HOST}}
+              MINIO_PORT=${{secrets.MINIO_PORT}}
+              MINIO_SECRET_KEY=${{secrets.MINIO_SECRET_KEY}}
+              NEXT_PUBLIC_G_TAG=${{secrets.NEXT_PUBLIC_G_TAG}}
+              NEXT_PUBLIC_SENTRY_DSN=${{ secrets.NEXT_PUBLIC_SENTRY_DSN }}
+              POSTGRES_DIRECT_URL=${{ secrets.POSTGRES_DIRECT_URL }}
+              POSTGRES_URL=${{ secrets.POSTGRES_URL }}
+              SENTRY_AUTH_TOKEN=${{ secrets.SENTRY_AUTH_TOKEN }}
+              SENTRY_REPORT_URL=${{ secrets.SENTRY_REPORT_URL }}
 
         - name: Show pushed image tags
           run: echo "Pushed docker image with tag ${{ env.VERSION }}"
