--- a/.github/workflows/renovate-validator.yaml
+++ b/.github/workflows/renovate-validator.yaml
@@ -15,5 +15,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
+        with:
+          persist-credentials: false
       - name: validate renovate.json
         run: npx --package=renovate -c renovate-config-validator
