--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -117,7 +117,7 @@ jobs:
         uses: docker/build-push-action@ca877d9245402d1537745e0e356eab47c3520991 # v6
         with:
           context: .
-          file: ./storybook.Dockerfile
+          file: ./storybook/storybook.Dockerfile
           push: true
           tags: ${{ steps.meta.outputs.tags }}
 
