--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -1,94 +1,90 @@
 name: cd
 permissions:
-    contents: write
-    pull-requests: write
+  contents: write
+  pull-requests: write
 on:
   pull_request:
     types: [opened, synchronize, edited]
 
+# -- 共通ステップ定義（YAMLアンカー） --
+x-common-steps: &common-steps
+  - name: Checkout code
+    uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
+    with:
+      persist-credentials: false
+
+  - name: Extract version from package.json
+    run: echo "PACKAGE_VERSION=$(jq -r '.version' package.json)" >> "$GITHUB_ENV"
+
+  - name: Log in to Docker Hub
+    uses: docker/login-action@9780b0c442fbb1117ed29e0efdff1e18412f7567 # v3
+    with:
+      username: ${{ secrets.DOCKER_HUB_USERNAME }}
+      password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+
+x-show-tags-step: &show-tags-step
+  - name: Show pushed image tags
+    run: echo "Pushed docker image with tag ${{ env.PACKAGE_VERSION }}"
+
 jobs:
-    build-push-s-private:
-        permissions:
-          contents: write
-        runs-on: ubuntu-24.04
-        if: contains(join(github.event.pull_request.labels.*.name, ','), 'autorelease')
-        timeout-minutes: 20
-        steps:
+  build-push-s-private:
+    permissions:
+      contents: write
+    runs-on: ubuntu-24.04
+    if: contains(join(github.event.pull_request.labels.*.name, ','), 'autorelease')
+    timeout-minutes: 20
+    steps:
+      # -- 共通ステップをまとめて展開 --
+      - <<: *common-steps
 
-        - name: Checkout code
-          uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
-          with:
-            persist-credentials: false
-
-        - name: Extract version from package.json
-          run: echo "PACKAGE_VERSION=$(jq -r '.version' package.json)" >> "$GITHUB_ENV"
-
-        - name: Log in to Docker Hub
-          uses: docker/login-action@9780b0c442fbb1117ed29e0efdff1e18412f7567 # v3
-          with:
-            username: ${{ secrets.DOCKER_HUB_USERNAME }}
-            password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
-
-        - name: Extract Docker metadata
-          id: meta
-          uses: docker/metadata-action@369eb591f429131d6889c46b94e711f089e6ca96 # v5
-          with:
-            images: ${{ secrets.DOCKER_HUB_USERNAME }}/s-private
-            tags: |
-              type=raw,value=latest
-              type=raw,value=${{ env.PACKAGE_VERSION }}
-
-        - name: Build and push Docker image with version tag
-          uses: docker/build-push-action@ca877d9245402d1537745e0e356eab47c3520991 # v6
-          with:
-            context: .
-            file: ./Dockerfile
-            push: true
-            tags: ${{ steps.meta.outputs.tags }}
-            secrets: |
-              AUTH_SECRET=${{secrets.AUTH_SECRET}}
-              AUTH_URL=${{secrets.AUTH_URL}}
-              AUTH0_ID=${{secrets.AUTH0_ID}}
-              AUTH0_SECRET=${{secrets.AUTH0_SECRET}}
-              AUTH0_ISSUER=${{secrets.AUTH0_ISSUER}}
-              LINE_NOTIFY_SECRET_TOKEN=${{secrets.LINE_NOTIFY_SECRET_TOKEN}}
-              LINE_NOTIFY_URL=${{secrets.LINE_NOTIFY_URL}}
-              MINIO_ACCESS_KEY=${{secrets.MINIO_ACCESS_KEY}}
-              MINIO_BUCKET_NAME=${{secrets.MINIO_BUCKET_NAME}}
-              MINIO_HOST=${{secrets.MINIO_HOST}}
-              MINIO_PORT=${{secrets.MINIO_PORT}}
-              MINIO_SECRET_KEY=${{secrets.MINIO_SECRET_KEY}}
-              NEXT_PUBLIC_G_TAG=${{secrets.NEXT_PUBLIC_G_TAG}}
-              NEXT_PUBLIC_SENTRY_DSN=${{ secrets.NEXT_PUBLIC_SENTRY_DSN }}
-              POSTGRES_DIRECT_URL=${{ secrets.POSTGRES_DIRECT_URL }}
-              POSTGRES_URL=${{ secrets.POSTGRES_URL }}
-              SENTRY_AUTH_TOKEN=${{ secrets.SENTRY_AUTH_TOKEN }}
-              SENTRY_REPORT_URL=${{ secrets.SENTRY_REPORT_URL }}
-
-        - name: Show pushed image tags
-          run: echo "Pushed docker image with tag ${{ env.PACKAGE_VERSION }}"
-
-    build-push-storybook:
-      permissions:
-        contents: write
-      runs-on: ubuntu-24.04
-      if: contains(join(github.event.pull_request.labels.*.name, ','), 'autorelease')
-      timeout-minutes: 20
-      steps:
-
-      - name: Checkout code
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
+      - name: Extract Docker metadata
+        id: meta
+        uses: docker/metadata-action@369eb591f429131d6889c46b94e711f089e6ca96 # v5
         with:
-          persist-credentials: false
+          images: ${{ secrets.DOCKER_HUB_USERNAME }}/s-private
+          tags: |
+            type=raw,value=latest
+            type=raw,value=${{ env.PACKAGE_VERSION }}
 
-      - name: Extract version from package.json
-        run: echo "PACKAGE_VERSION=$(jq -r '.version' package.json)" >> "$GITHUB_ENV"
-
-      - name: Log in to Docker Hub
-        uses: docker/login-action@9780b0c442fbb1117ed29e0efdff1e18412f7567 # v3
+      - name: Build and push Docker image with version tag
+        uses: docker/build-push-action@ca877d9245402d1537745e0e356eab47c3520991 # v6
         with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          secrets: |
+            AUTH_SECRET=${{ secrets.AUTH_SECRET }}
+            AUTH_URL=${{ secrets.AUTH_URL }}
+            AUTH0_ID=${{ secrets.AUTH0_ID }}
+            AUTH0_SECRET=${{ secrets.AUTH0_SECRET }}
+            AUTH0_ISSUER=${{ secrets.AUTH0_ISSUER }}
+            LINE_NOTIFY_SECRET_TOKEN=${{ secrets.LINE_NOTIFY_SECRET_TOKEN }}
+            LINE_NOTIFY_URL=${{ secrets.LINE_NOTIFY_URL }}
+            MINIO_ACCESS_KEY=${{ secrets.MINIO_ACCESS_KEY }}
+            MINIO_BUCKET_NAME=${{ secrets.MINIO_BUCKET_NAME }}
+            MINIO_HOST=${{ secrets.MINIO_HOST }}
+            MINIO_PORT=${{ secrets.MINIO_PORT }}
+            MINIO_SECRET_KEY=${{ secrets.MINIO_SECRET_KEY }}
+            NEXT_PUBLIC_G_TAG=${{ secrets.NEXT_PUBLIC_G_TAG }}
+            NEXT_PUBLIC_SENTRY_DSN=${{ secrets.NEXT_PUBLIC_SENTRY_DSN }}
+            POSTGRES_DIRECT_URL=${{ secrets.POSTGRES_DIRECT_URL }}
+            POSTGRES_URL=${{ secrets.POSTGRES_URL }}
+            SENTRY_AUTH_TOKEN=${{ secrets.SENTRY_AUTH_TOKEN }}
+            SENTRY_REPORT_URL=${{ secrets.SENTRY_REPORT_URL }}
+
+      # -- 共通のタグ出力ステップを展開 --
+      - <<: *show-tags-step
+
+  build-push-storybook:
+    permissions:
+      contents: write
+    runs-on: ubuntu-24.04
+    if: contains(join(github.event.pull_request.labels.*.name, ','), 'autorelease')
+    timeout-minutes: 20
+    steps:
+      # -- 共通ステップをまとめて展開 --
+      - <<: *common-steps
 
       - name: Extract Docker metadata
         id: meta
@@ -107,5 +103,5 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
 
-      - name: Show pushed image tags
-        run: echo "Pushed docker image with tag ${{ env.PACKAGE_VERSION }}"
+      # -- 共通のタグ出力ステップを展開 --
+      - <<: *show-tags-step
