--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
 		"minio": "8.0.4",
 		"next": "15.1.6",
 		"next-auth": "5.0.0-beta.25",
+		"next-intl": "3.26.3",
 		"next-themes": "0.4.4",
 		"next-view-transitions": "0.3.4",
 		"photoswipe": "5.4.4",
