--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
 		"@radix-ui/react-slot": "1.1.1",
 		"@radix-ui/react-tabs": "1.1.2",
 		"@sentry/nextjs": "8.50.0",
+		"@shikijs/rehype": "2.2.0",
 		"@t3-oss/env-nextjs": "0.11.1",
 		"@tailwindcss/typography": "0.5.16",
 		"class-variance-authority": "0.7.1",
@@ -63,6 +64,9 @@
 		"prisma": "6.2.1",
 		"react": "19.0.0",
 		"react-dom": "19.0.0",
+		"rehype-slug": "6.0.0",
+		"remark-breaks": "4.0.0",
+		"remark-toc": "9.0.0",
 		"server-only": "0.0.1",
 		"sharp": "0.33.5",
 		"sonner": "1.7.2",
