--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,5 +24,5 @@
 		".next/types/**/*.ts",
 		"vitest.config.ts"
 	],
-	"exclude": ["node_modules", "script/**/*", "README.md"]
+	"exclude": ["node_modules"]
 }
