--- a/.env.sample
+++ b/.env.sample
@@ -16,7 +16,7 @@ LINE_NOTIFY_SECRET_TOKEN=
 
 ## Prisma connection
 POSTGRES_URL="postgresql://USERNAME:PASSWORD@IP_ADDRESS:PORT/DB_NAME?schema=SCHEMA_NAME"
-POSTGRES_DIRECT_URL="postgresql://USERNAME:PASSWORD@IP_ADDRESS:PORT/DB_NAME?schema=SCHEMA_NAME"
+# POSTGRES_DIRECT_URL="postgresql://USERNAME:PASSWORD@IP_ADDRESS:PORT/DB_NAME?schema=SCHEMA_NAME" # not needed for prisma postgresql
 
 ## Auth.js
 AUTH_URL="http://localhost:3000"
