--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
 		"@shikijs/rehype": "2.2.0",
 		"@t3-oss/env-nextjs": "0.11.1",
 		"@tailwindcss/typography": "0.5.16",
+		"@vercel/analytics": "1.5.0",
 		"class-variance-authority": "0.7.1",
 		"clsx": "2.1.1",
 		"html-react-parser": "5.2.2",
