--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 	"type": "module",
 	"scripts": {
 		"dev": "next dev",
-		"build": "next build",
+		"build": "npx @cloudflare/next-on-pages",
 		"start": "next start",
 		"lint": "next lint",
 		"lint:fix": "next lint --fix",
@@ -28,10 +28,7 @@
 		"security": "pnpm audit",
 		"actionlint": "actionlint",
 		"ghalint": "ghalint run",
-		"depcheck": "depcheck",
-		"cf:build": "npx @cloudflare/next-on-pages",
-		"cf:preview": "pnpm cf:build && wrangler pages dev",
-		"cf:deploy": "pnpm cf:build && wrangler pages deploy"
+		"depcheck": "depcheck"
 	},
 	"dependencies": {
 		"@biomejs/biome": "1.9.4",
@@ -146,7 +143,6 @@
 		"storybook-dark-mode": "4.0.2",
 		"tailwindcss": "3.4.17",
 		"typescript": "5.7.3",
-		"vitest": "3.0.5",
-		"wrangler": "3.107.2"
+		"vitest": "3.0.5"
 	}
 }
