--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,8 +15,7 @@
 		"jsx": "preserve",
 		"incremental": true,
 		"plugins": [{ "name": "next" }],
-		"paths": { "@/*": ["./src/*"] },
-		"types": ["@cloudflare/workers-types/2023-07-01"]
+		"paths": { "@/*": ["./src/*"] }
 	},
 	"include": [
 		"next-env.d.ts",
