--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
 		"@storybook/react": "8.5.8",
 		"@storybook/test": "8.5.8",
 		"@storybook/test-runner": "0.21.3",
+		"@tanstack/react-query-devtools": "5.66.9",
 		"@testing-library/jest-dom": "6.6.3",
 		"@testing-library/react": "16.2.0",
 		"@testing-library/user-event": "14.6.1",
