--- a/.env.sample
+++ b/.env.sample
@@ -1,7 +1,7 @@
 # Public ENVS
 
-## Line Notify
-LINE_NOTIFY_URL="https://notify-api.line.me/api/notify"
+## Pushover
+PUSHOVER_URL="https://api.pushover.net/1/messages.json"
 
 ## Sentry
 NEXT_PUBLIC_SENTRY_DSN="https://cee646a424e92410d7f08ae439cf1fbf@o4508058782531584.ingest.us.sentry.io/4508058784825344"
@@ -11,8 +11,9 @@ NEXT_PUBLIC_G_TAG=
 
 # Private ENVS
 
-## Line Notify
-LINE_NOTIFY_SECRET_TOKEN=
+## Pushover
+PUSHOVER_USER_KEY=
+PUSHOVER_APP_TOKEN=
 
 ## Prisma connection
 POSTGRES_URL="postgresql://USERNAME:PASSWORD@IP_ADDRESS:PORT/DB_NAME?schema=SCHEMA_NAME"
