--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -48,8 +48,9 @@ jobs:
           AUTH0_ID: ${{secrets.AUTH0_ID}}
           AUTH0_SECRET: ${{secrets.AUTH0_SECRET}}
           AUTH0_ISSUER: ${{secrets.AUTH0_ISSUER}}
-          LINE_NOTIFY_SECRET_TOKEN: ${{secrets.LINE_NOTIFY_SECRET_TOKEN}}
-          LINE_NOTIFY_URL: ${{secrets.LINE_NOTIFY_URL}}
+          PUSHOVER_URL: ${{secrets.PUSHOVER_URL}}
+          PUSHOVER_APP_TOKEN: ${{secrets.PUSHOVER_APP_TOKEN}}
+          PUSHOVER_USER_KEY: ${{secrets.PUSHOVER_USER_KEY}}
           MINIO_ACCESS_KEY: ${{secrets.MINIO_ACCESS_KEY}}
           MINIO_BUCKET_NAME: ${{secrets.MINIO_BUCKET_NAME}}
           MINIO_HOST: ${{secrets.MINIO_HOST}}
