fix: 🐛 test envs

--- a/.env.test
+++ b/.env.test
@@ -2,4 +2,4 @@ SKIP_ENV_VALIDATION=1
 
 PUSHOVER_URL="https://example.com"
 PUSHOVER_USER_KEY="secretUserKey"
-PUSHOVER_API_KEY="secretApiKey"
+PUSHOVER_APP_TOKEN="secretAppToken"
