--- a/package.json
+++ b/package.json
@@ -142,6 +142,7 @@
 		"storybook-dark-mode": "4.0.2",
 		"tailwindcss": "3.4.17",
 		"typescript": "5.8.2",
+		"typescript-eslint": "8.28.0",
 		"vitest": "3.0.9"
 	}
 }
