feat: 🎸 add s-schema as submodule

--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
 		"test": "vitest",
 		"test:e2e": "playwright test",
 		"test:storybook": "test-storybook --coverage --coverageDirectory .storybook-coverage",
-		"prisma:generate": "prisma generate --no-engine",
-		"prisma:migrate": "prisma migrate dev",
-		"prisma:deploy": "prisma migrate deploy",
-		"prisma:studio": "prisma studio",
-		"postinstall": "pnpm prisma:generate",
+		"prisma:generate": "prisma generate --no-engine --schema=./s-schema/schema.prisma",
+		"prisma:migrate": "prisma migrate dev --schema=./s-schema/schema.prisma",
+		"prisma:deploy": "prisma migrate deploy --schema=./s-schema/schema.prisma",
+		"prisma:studio": "prisma studio  --schema=./s-schema/schema.prisma",
+		"postinstall": "pnpm prisma:generate  --schema=./s-schema/schema.prisma",
 		"commit": "git-cz",
 		"storybook": "storybook dev -p 6006",
 		"storybook:build": "storybook build -o .storybook-static",
