--- a/.github/workflows/renovate-validator.yaml
+++ b/.github/workflows/renovate-validator.yaml
@@ -17,5 +17,7 @@ jobs:
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
         with:
           persist-credentials: false
+          submodules: true
+
       - name: validate renovate.json
         run: npx --package=renovate -c renovate-config-validator
