--- a/.github/workflows/github-actions-lint.yaml
+++ b/.github/workflows/github-actions-lint.yaml
@@ -1,7 +1,9 @@
-# actionlint と ghalint を使って GitHub Actions の静的解析
+---
+# actionlint と ghalint を使って GitHub Actions の静的解析する
+#
 # - actionlint: https://github.com/rhysd/actionlint
 # - ghalint: https://github.com/suzuki-shunsuke/ghalint
-name: GitHub Actions Lint
+name: github-actions-lint
 
 on:
   pull_request:
@@ -13,14 +15,14 @@ env:
   # NOTE: actionlint をアップデートする場合は、 ACTIONLINT_VERSION, ACTIONLINT_CHECKSUM を更新してください
   ACTIONLINT_OS: linux
   ACTIONLINT_ARCH: amd64
-  ACTIONLINT_VERSION: 1.7.7
-  ACTIONLINT_CHECKSUM: 023070a287cd8cccd71515fedc843f1985bf96c436b7effaecce67290e7e0757
+  ACTIONLINT_VERSION: 1.7.3
+  ACTIONLINT_CHECKSUM: 37252b4d440b56374b0fc1726e05fd7452d30d6d774f6e9b52e65bb64475f9db
 
   # NOTE: ghalint をアップデートする場合は、 GHALINT_VERSION, GHALINT_CHECKSUM を更新してください
   GHALINT_OS: linux
   GHALINT_ARCH: amd64
-  GHALINT_VERSION: 1.2.1
-  GHALINT_CHECKSUM: 3fafc8dac6fde1b74a5345764a9b19a94fdb2d374d3a3b076cee28b86449ae79
+  GHALINT_VERSION: 1.0.0
+  GHALINT_CHECKSUM: e9006ff212a3b27a99af43db687ded78173baa2f9816b2e2a9bed03a2ed2f954
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref || github.run_id }}
@@ -28,7 +30,7 @@ concurrency:
 
 jobs:
   lint:
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-latest
     timeout-minutes: 5
     permissions:
       contents: read
@@ -36,7 +38,6 @@ jobs:
       - name: Checkout
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
-          persist-credentials: false
           submodules: true
 
       - name: Download actionlint
@@ -70,7 +71,7 @@ jobs:
         run: ./ghalint run
 
   check-binary-version:
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-latest
     timeout-minutes: 5
     permissions:
       contents: read
@@ -84,7 +85,6 @@ jobs:
       - name: Checkout
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
-          persist-credentials: false
           submodules: true
 
       - name: Get Binary Info
