--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
 		"@storybook/react": "8.6.11",
 		"@storybook/test": "8.6.11",
 		"@storybook/test-runner": "0.22.0",
+		"@tailwindcss/postcss": "4.1.4",
 		"@tanstack/react-query-devtools": "5.74.7",
 		"@testing-library/jest-dom": "6.6.3",
 		"@testing-library/react": "16.3.0",
@@ -115,7 +116,6 @@
 		"@vitest/browser": "3.1.1",
 		"@vitest/coverage-v8": "3.1.1",
 		"@vitest/eslint-plugin": "1.1.38",
-		"autoprefixer": "10.4.21",
 		"depcheck": "1.4.7",
 		"dotenv": "16.5.0",
 		"eslint": "9.25.1",
@@ -143,7 +143,7 @@
 		"remark-rehype": "11.1.1",
 		"storybook": "8.6.11",
 		"storybook-dark-mode": "4.0.2",
-		"tailwindcss": "3.4.17",
+		"tailwindcss": "4.1.4",
 		"typescript": "5.8.2",
 		"typescript-eslint": "8.31.1",
 		"vitest": "3.1.1"
