feat: 🎸 add eslint inspector

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"start": "next start",
 		"lint": "next lint",
 		"lint:fix": "next lint --fix",
+		"lint:inspector": "config-inspector --config eslint.config.js",
 		"fmt:ci": "biome ci *",
 		"fmt:fix": "biome check --write *",
 		"test": "vitest",
@@ -85,6 +86,7 @@
 		"@biomejs/biome": "1.9.4",
 		"@chromatic-com/storybook": "3.2.6",
 		"@eslint/compat": "1.2.8",
+		"@eslint/config-inspector": "1.0.2",
 		"@eslint/eslintrc": "3.3.1",
 		"@eslint/js": "9.25.1",
 		"@eslint/markdown": "6.4.0",
