--- a/.env.sample
+++ b/.env.sample
@@ -18,7 +18,7 @@ POSTGRES_URL="postgresql://USERNAME:PASSWORD@IP_ADDRESS:PORT/DB_NAME?schema=SCHE
 
 ## Auth.js
 AUTH_SECRET= # generate by `openssl rand -base64 32` command
-AUTH0_ID=
+AUTH0_CLIENT_ID=
 AUTH0_SECRET=
 AUTH0_ISSUER=
 
