--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -48,7 +48,7 @@ jobs:
             tags: ${{ steps.meta.outputs.tags }}
             secrets: |
               AUTH_SECRET=${{secrets.AUTH_SECRET}}
-              AUTH0_ID=${{secrets.AUTH0_ID}}
+              AUTH0_CLIENT_ID=${{secrets.AUTH0_CLIENT_ID}}
               AUTH0_SECRET=${{secrets.AUTH0_SECRET}}
               AUTH0_ISSUER=${{secrets.AUTH0_ISSUER}}
               PUSHOVER_URL=${{secrets.PUSHOVER_URL}}
