--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -47,7 +47,7 @@ jobs:
       - run: pnpm build
         env:
           AUTH_SECRET: ${{secrets.AUTH_SECRET}}
-          AUTH0_ID: ${{secrets.AUTH0_ID}}
+          AUTH0_CLIENT_ID: ${{secrets.AUTH0_CLIENT_ID}}
           AUTH0_SECRET: ${{secrets.AUTH0_SECRET}}
           AUTH0_ISSUER: ${{secrets.AUTH0_ISSUER}}
           PUSHOVER_URL: ${{secrets.PUSHOVER_URL}}
