--- a/.env.sample
+++ b/.env.sample
@@ -19,8 +19,8 @@ POSTGRES_URL="postgresql://USERNAME:PASSWORD@IP_ADDRESS:PORT/DB_NAME?schema=SCHE
 ## Auth.js
 AUTH_SECRET= # generate by `openssl rand -base64 32` command
 AUTH0_CLIENT_ID=
-AUTH0_SECRET=
-AUTH0_ISSUER=
+AUTH0_CLIENT_SECRET=
+AUTH0_ISSUER_BASE_URL=
 
 ## Sentry
 SENTRY_AUTH_TOKEN=
