--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -49,8 +49,8 @@ jobs:
             secrets: |
               AUTH_SECRET=${{secrets.AUTH_SECRET}}
               AUTH0_CLIENT_ID=${{secrets.AUTH0_CLIENT_ID}}
-              AUTH0_SECRET=${{secrets.AUTH0_SECRET}}
-              AUTH0_ISSUER=${{secrets.AUTH0_ISSUER}}
+              AUTH0_CLIENT_SECRET=${{secrets.AUTH0_CLIENT_SECRET}}
+              AUTH0_ISSUER_BASE_URL=${{secrets.AUTH0_ISSUER_BASE_URL}}
               PUSHOVER_URL=${{secrets.PUSHOVER_URL}}
               PUSHOVER_APP_TOKEN=${{secrets.PUSHOVER_APP_TOKEN}}
               PUSHOVER_USER_KEY=${{secrets.PUSHOVER_USER_KEY}}
