chore: 🤖 add database prisma integration

--- a/.env.sample
+++ b/.env.sample
@@ -13,7 +13,7 @@ PUSHOVER_USER_KEY=
 PUSHOVER_APP_TOKEN=
 
 ## Prisma connection
-POSTGRES_URL="postgresql://USERNAME:PASSWORD@IP_ADDRESS:PORT/DB_NAME?schema=SCHEMA_NAME"
+DATABASE_URL="postgresql://USERNAME:PASSWORD@IP_ADDRESS:PORT/DB_NAME?schema=SCHEMA_NAME"
 # POSTGRES_DIRECT_URL="postgresql://USERNAME:PASSWORD@IP_ADDRESS:PORT/DB_NAME?schema=SCHEMA_NAME" # not needed for prisma postgresql
 
 ## Auth.js
