--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
 		"@chromatic-com/storybook": "3.2.7",
 		"@eslint/compat": "1.2.8",
 		"@eslint/config-inspector": "1.0.2",
+		"@eslint/css": "0.9.0",
 		"@eslint/eslintrc": "3.3.1",
 		"@eslint/js": "9.27.0",
 		"@eslint/markdown": "6.4.0",
