fix: migrate storybook to v9

--- a/package.json
+++ b/package.json
@@ -85,7 +85,7 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.0.6",
-		"@chromatic-com/storybook": "3.2.7",
+		"@chromatic-com/storybook": "4.0.1",
 		"@eslint/compat": "1.2.8",
 		"@eslint/config-inspector": "1.0.2",
 		"@eslint/css": "0.9.0",
@@ -94,20 +94,15 @@
 		"@eslint/markdown": "6.4.0",
 		"@next/bundle-analyzer": "15.3.4",
 		"@playwright/test": "1.52.0",
+		"@storybook/addon-docs": "9.0.14",
+		"@storybook/addon-vitest": "9.0.14",
 		"@storybook/addon-a11y": "9.0.14",
 		"@storybook/addon-coverage": "2.0.0",
-		"@storybook/addon-essentials": "8.6.14",
 		"@storybook/addon-links": "9.0.14",
 		"@storybook/addon-onboarding": "9.0.14",
-		"@storybook/addon-storysource": "8.6.14",
 		"@storybook/addon-themes": "9.0.14",
-		"@storybook/blocks": "8.6.14",
-		"@storybook/experimental-addon-test": "8.6.14",
-		"@storybook/experimental-nextjs-vite": "8.6.14",
-		"@storybook/nextjs": "9.0.14",
-		"@storybook/react": "9.0.14",
-		"@storybook/test": "8.6.14",
-		"@storybook/test-runner": "0.22.0",
+		"@storybook/nextjs-vite": "9.0.14",
+		"@storybook/test-runner": "0.23.0",
 		"@tailwindcss/postcss": "4.1.11",
 		"@tanstack/react-query-devtools": "5.77.0",
 		"@testing-library/jest-dom": "6.6.3",
