fix: update storybook settings
fix #1339

--- a/package.json
+++ b/package.json
@@ -95,13 +95,21 @@
 		"@next/bundle-analyzer": "15.3.5",
 		"@playwright/test": "1.53.2",
 		"@storybook/addon-a11y": "9.0.15",
+		"@storybook/addon-actions": "9.0.8",
+		"@storybook/addon-backgrounds": "9.0.8",
+		"@storybook/addon-controls": "9.0.8",
 		"@storybook/addon-coverage": "2.0.0",
 		"@storybook/addon-docs": "9.0.15",
 		"@storybook/addon-links": "9.0.15",
+		"@storybook/addon-measure": "9.0.8",
 		"@storybook/addon-onboarding": "9.0.15",
+		"@storybook/addon-outline": "9.0.8",
 		"@storybook/addon-themes": "9.0.15",
+		"@storybook/addon-toolbars": "9.0.8",
+		"@storybook/addon-viewport": "9.0.8",
 		"@storybook/addon-vitest": "9.0.15",
 		"@storybook/nextjs-vite": "9.0.15",
+		"@storybook/test": "8.6.14",
 		"@storybook/test-runner": "0.23.0",
 		"@tailwindcss/postcss": "4.1.11",
 		"@tanstack/react-query-devtools": "5.81.5",
