--- a/.github/workflows/update-submodule.yaml
+++ b/.github/workflows/update-submodule.yaml
@@ -6,6 +6,6 @@ on:
   workflow_dispatch:
 
 jobs:
-  push-to-public:
+  update-submodules:
     uses: s-hirano-ist/s-templates/.github/workflows/update-submodule.yaml@main
     secrets: inherit
